# DummyML

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
decisiontree/: decision_tree.py
naivebayes/: naivebayes.py
src/decisiontree/: decision_tree.py  readme.md
src/decisiontree/example_data/: data.txt
src/kmeans/: kmeansclustering.py  readme.md
src/knn/: knn.py  readme.md
src/linearregression/: linear_regression.py  notebook.ipynb  readme.md
src/logisticregression/: logistic_regression.py  notebook.ipynb  readme.md
src/naivebayes/: naivebayes.py  readme.md
src/randomforest/: notebook.ipynb  random_forest.py  readme.md  utils.py
src/svm/: notebook.ipynb  readme.md  svm.py  utils.py
src/xgboost/: notebook.ipynb
svm/: svm.py
