[tool.poetry]
name = "Basic Machine Learning"
version = "0.0.0"
description = ""
authors = [
    "Imanol Granada <imanolgranada@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.10"
pytorch-lightning = "^2.0.1"
torch = "2.0.0"
albumentations = "1.2.1"
pandas = "^2.0.0"
matplotlib = "^3.8.0"
cvxopt = "^1.3.2"

[build-system]
requires = ["setuptools", "wheel", "Cython", "numpy", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']
skip-string-normalization = 1

[tool.isort]
profile = "black"
py_version = 310
line_length = 120
